# coding-challenge

./: .env.example  .gitignore  README.md  pyproject.toml
app/: main.py  models.py  schemas.py
app/api/v1/: endpoints.py
app/core/: database.py
app/graphql/: schema.py
app/services/: ai_service.py  import_service.py  reconciliation.py
tests/: conftest.py  test_api.py  test_idempotency.py  test_reconciliation.py
